--- a/components/brave_today/rust/BUILD.gn
+++ b/components/brave_today/rust/BUILD.gn
@@ -2,9 +2,7 @@ import("//brave/build/cargo.gni")
 import("//brave/build/rust/rust_cxx.gni")
 
 rust_crate("rust_lib") {
-  inputs = [
-    "lib.rs"
-  ]
+  inputs = [ "lib.rs" ]
 }
 
 rust_cxx("rust-rs") {
