--- a/components/skus/common/BUILD.gn
+++ b/components/skus/common/BUILD.gn
@@ -1,9 +1,7 @@
 import("//mojo/public/tools/bindings/mojom.gni")
 
 mojom("mojom") {
-  sources = [
-    "skus_sdk.mojom",
-  ]
+  sources = [ "skus_sdk.mojom" ]
 
   deps = [ "//mojo/public/mojom/base" ]
 }
