--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,6 +10,13 @@ CI/run-network-audit:
 - chromium_src/**/*features.cc
 - patches/chrome-VERSION.patch
 
+CI/storybook-url:
+- "**/*.ts" 
+- "**/*.tsx"
+- "**/*.svelte"
+- "**/*.css"
+- "**/*.scs"
+
 potential-layer-violation-fixes:
 - browser/android/BUILD.gn
 - browser/android/preferences/BUILD.gn
